# socksmachine

./: .gitignore  Command.hs  Main.hs  Monad.hs  Server.hs  client.html  socksmachine.cabal
SocksMachine/: Command.hs  Monad.hs  Server.hs
