name:                socksmachine
version:             0.1.0.0
synopsis:            Hackathon-quality websockets message broadcast server
-- description:
-- license:
author:              Ben James
-- maintainer:
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable socksmachine
  main-is:             Server.hs
  -- other-modules:
  other-extensions:    GeneralizedNewtypeDeriving, PackageImports
  build-depends:       base >=4.6 && <4.7
                     , transformers >=0.3 && <0.4
                     , MonadCatchIO-transformers >=0.3 && <0.4
                     , system-uuid >=2.1 && <2.2
                     , websockets >=0.8 && <0.9
                     , text >=0.11 && <0.12
  -- hs-source-dirs:
  default-language:    Haskell2010
