name:                socksmachine
version:             0.1.0.0
synopsis:            Hackathon-quality websockets message broadcast server
-- description:
-- license:
author:              Ben James
-- maintainer:
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable socksmachine
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    GeneralizedNewtypeDeriving, PackageImports
  build-depends:       base >=4.6 && <4.8
                     , transformers >=0.3 && <0.4
                     , websockets >=0.8 && <0.9
                     , text >=0.11 && <0.12
                     , parsec >=3.1 && <3.2
                     , monad-control >=0.3 && <0.4
                     , transformers-base >=0.4 && <0.5
                     , async >=2.0 && <2.1
                     , lifted-base >=0.2 && <0.3
                     , lifted-async >=0.1 && <0.2
  -- hs-source-dirs:
  default-language:    Haskell2010
